TSDUCK CHANGE LOG AND RELEASE NOTES

-------------------------------------------------------------------------------

VERSION 3.28-2450

[NEW] New commands and plugins:

  * Added plugin "pcredit" (edit PCR, PTS and DTS values in various ways).

[IMP] Improvements on existing commands and plugins:

  * New options in exiting commands and plugins:
    - Option --install-dvb-firmware in "tsconfig".

[BUG] Bug fixes:

  * Fixed issue #791: In plugin "merge", the PCR were not correcty adjusted
    when the input PCR had a discontinuity in the future.
  * Fixed issue #830: Incorrect formatting of HEVC HRD parameters.
  * Fixed issue #830: Incorrect handling of PES packets with 1 or 2 bytes in
    last TS packet.

-------------------------------------------------------------------------------

VERSION 3.27-2434

[NEW] New commands and plugins:

  * Added command "tsfclean" (cleanup TS files).
  * Added plugin "pcrcopy" (copy and synchronize PCR from one PID to another).
  * Added plugin "svresync" (resynchronize the clock of a service based on
    another service).
  * Added plugin "pidshift" (shift selected PID's forward inside the TS).
  * Added plugin "eitinject" (generate and inject EIT's inside the TS).

[IMP] Improvements on existing commands and plugins:

  * Added support for Dektec Ethernet devices (eg. DTA-2162).
  * The plugin "zap" can now select more than one service.
  * New options in exiting commands and plugins:
    - Option --max-output-packets in "tsp".
    - Option --force-local-multicast-outgoing in output plugin "ip".
    - Options --fifo-size, --preload-fifo in input plugin "dektec".
    - Option --wait-detach in output plugin "dektec".
    - Option --io-standard and all TS-over-IP options in input and output
      plugins "dektec".
    - Options --enforce-burst, --packet-burst in output plugin "srt".
    - Options --audio, --codec, --ecm, --emm, --intra-frame, --psi-si,
      --service, --subtitles, --video in plugin "filter".