@@ -12,6 +12,7 @@ VERSION 3.28-2450
 
   * New options in exiting commands and plugins:
     - Option --install-dvb-firmware in "tsconfig".
+    - Option --local-interface in plugin "srt" (input and output).
 
 [BUG] Bug fixes:
 
